# think-extension-azure-chat

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  infra.yml
agent/: .env.example  Dockerfile
agent/app/: main.py  schemas.py
agent/app/config/: config.azure.json  config.json
agent/app/utils/: llm.py  mcp_session_manager.py  mock_llm.py
api/: Dockerfile
api/app/: .env.example  main.py  schemas.py
api/app/utils/: mock_llm.py
app/: __init__.py  store.py
app/utils/: mock_llm.py
deploy/: compose.local.yml
docs/: poc-flow-chart.py  pyproject.toml
extras/basic_chat/: Dockerfile  README.md  compose.local.yml  requirements.txt
extras/basic_chat/deploy/: deploy_webapp.sh
extras/basic_chat/front/: app.py  config.json  requirements.txt
extras/frontend/: .env.example
extras/frontend/front/: app.py
extras/previous_versions/v1/agent/: Dockerfile
extras/previous_versions/v1/deploy/: README.md
extras/previous_versions/v1/infra/: README.md  outputs.tf  variables.tf
extras/previous_versions/v1/mcp/: Dockerfile  requirements.txt
extras/previous_versions/v2/azure_ai_foundry/: Dockerfile  README.md  requirements.txt  test01.py
extras/previous_versions/v2/trigger_script/: trigger_aci_job.py  (+1 more)
infra/: main.tf
mcp/: Dockerfile  combined_server.py  run_servers.py
mcp/date/: main.py
mcp/web_docs/: main.py
think_api/: Dockerfile  README.md  requirements.txt
think_api/app/: main.py  utils.py
think_container/: Dockerfile  README.md  main.py
think_container/utils/: cosmos.py  env.py
(+9 files in other folders)
