[project]
name = "fastapi-async-chatbot"
version = "0.1.0"
description = "FastAPI app demonstrating asynchronous, polling-based chatbot interface with mocked LLM."
authors = [{ name = "CloudSecMentor" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.6.0",
]

[project.urls]
Homepage = "https://example.com"
